imp/themes/screen.css
/* ... */
/* Large addresslist display. */
.largeaddrlist {
    cursor: pointer;
    background: #aaa;
    margin-right: 5px;
}
.largeaddrlist:hover {
    text-decoration: underline;
}

/* Thread/folder images */
span.treeImg {
    height: 20px;
    width: 20px;
    display: -moz-inline-stack;
    display: inline-block;
    vertical-align: middle;
}

span.treeImg1 {
    background-image: url("graphics/tree/line.png");
}
span.treeImg2 {
    background-image: url("graphics/tree/join.png");
}
span.treeImg3 {
    background-image: url("graphics/tree/joinbottom-down.png");
}
span.treeImg4 {
    background-image: url("graphics/tree/joinbottom.png");
}
span.treeImg5 {
    background-image: url("graphics/tree/rev-line.png");
}
span.treeImg6 {
    background-image: url("graphics/tree/rev-join.png");
}
span.treeImg7 {
    background-image: url("graphics/tree/rev-joinbottom-down.png");
}
span.treeImg8 {
    background-image: url("graphics/tree/rev-joinbottom.png");
}
span.treeImg9 {
    background-image: url("graphics/tree/minustop.png");
}
span.treeImg10 {
    background-image: url("graphics/tree/minus.png");
}
span.treeImg11 {
    background-image: url("graphics/tree/minusbottom.png");
}
span.treeImg12 {
    background-image: url("graphics/tree/rev-minustop.png");
}
span.treeImg13 {
    background-image: url("graphics/tree/rev-minus.png");
}
span.treeImg14 {
    background-image: url("graphics/tree/rev-minusbottom.png");
}
span.treeImg15 {
    background-image: url("graphics/tree/plustop.png");
}
span.treeImg16 {
    background-image: url("graphics/tree/plus.png");
}
span.treeImg17 {
    background-image: url("graphics/tree/plusbottom.png");
}
span.treeImg18 {
    background-image: url("graphics/tree/rev-plustop.png");
}
span.treeImg19 {
    background-image: url("graphics/tree/rev-plus.png");
}
span.treeImg20 {
    background-image: url("graphics/tree/rev-plusbottom.png");
}

/* Expand/Collapse graphic. */
span.arrowCollapsed {
    background-image: url("graphics/arrow_collapsed.png");
}
span.arrowExpanded {
    background-image: url("graphics/arrow_expanded.png");
}

/* Loading graphic */
span.loadingImg {
    z-index: 1000;
    border: 1px #e0e0e0 solid;
    -moz-border-radius: 5px;
    -webkit-border-radius: 5px;
    background: #fff url("graphics/loading.gif") no-repeat center;
    padding: 3px;
    width: 16px;
    height: 16px;
}
td.addressTr span.loadingImg {
    padding: 0 0 0 16px;
}

/* Inline display (Horde_Mime_Viewer) styles. */
.mimeStatusMessageTable {
    margin-bottom: 3px;
    font-size: 90%;
}
.mimeStatusMessageTable {
    background: #ffc;
    border: 1px solid #fff760;
    color: #000;
    display: -moz-inline-stack;
    display: inline-block;
    margin-bottom: 3px;
    padding: 4px;
    -moz-border-radius: 4px;
    -webkit-border-radius: 4px;
}
.mimeStatusIcon {
    width: 22px;
}
div.mimeStatusMessage, div.mimePartInfo {
    margin-bottom: 5px;
}
.mimePartInfo div {
    background: #efefef;
    border: 1px solid #ccc;
    font-size: 90%;
    margin: 0;
    padding: 5px;
    -moz-border-radius: 4px;
    -webkit-border-radius: 4px;
    /* For FF2 */
    display: table-cell;
    display: inline-block;
}
.mimePartInfo div img {
    vertical-align: bottom;
}
.mimePartInfoAtc div {
    border: 1px dashed;
    background-image: url("graphics/attachment.png");
    background-position: 2px 50%;
    background-repeat: no-repeat;
    padding-left: 25px;
}

.mimeStatusMessageTable td {
    padding: 0;
}
.mimeStatusMessageTable td table td {
    padding-right: 2px;
    white-space: nowrap;
}

.mimePartWrap, .mimePartWrapValid, .mimePartWrapInvalid {
    border: 2px solid #666;
    margin: 2px 0;
    padding: 4px;
    -moz-border-radius: 4px;
    -webkit-border-radius: 4px;
}
.mimePartWrapValid {
    border-color: #cfc;
}
.mimePartWrapInvalid {
    border-color: #ffd0af;
}

.downloadAtc, .downloadZipAtc, .saveImgAtc, .printAtc, .closeImg, .deleteImg, .foldersImg, .searchuiImg, .reloadImg {
    display: -moz-inline-stack;
    display: inline-block;
    height: 16px;
    width: 16px;
    background-color: transparent;
    background-position: center right;
    background-repeat: no-repeat;
    vertical-align: bottom;
}
.downloadAtc, .downloadZipAtc, .saveImgAtc {
    margin-left: 1px;
}
.downloadAtc, .saveAsImg {
    background-image: url("graphics/download.png");
}
.downloadZipAtc {
    background-image: url("graphics/mime/compressed.png");
}
.printAtc {
    background-image: url("graphics/print.png");
}
.saveImgAtc {
    background-image: url("graphics/gallery.png");
}
.deleteImg {
    background-image: url("graphics/delete.png");
}
.closeImg, .searchuiDelete {
    background-image: url("graphics/close.png");
}
.reloadImg {
    background-image: url("graphics/reload.png");
}

#itipconflicts tr.itipcollision {
    background-color: #f00;
    color: #fff;
}

#itipconflicts tr.itipnearcollision {
    background-color: #ee0;
}

